--- a/aecid-testsuite/Dockerfile
+++ b/aecid-testsuite/Dockerfile
@@ -48,6 +48,9 @@ RUN apt-get update && apt-get install -y \
     python3-urllib3 \
     python3-statsmodels \
     python3-pandas \
+    python3-numpy \
+    python3-patsy \
+    python3-defusedxml \
     libacl1-dev \
     postfix \
     procps \
