--- a/aecid-testsuite/docker/Dockerfile_fed
+++ b/aecid-testsuite/docker/Dockerfile_fed
@@ -1,9 +1,7 @@
 # Pull base image.
-ARG vardistri
+FROM fedora:latest
 
-FROM $vardistri
 ARG varbranch
-
 ENV BRANCH=$varbranch
 
 # allow the system to use two package managers (apt and pip), as we do it intentionally (needed since Debain Bookworm - see PEP 668
@@ -15,31 +13,28 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 LABEL maintainer="wolfgang.hotwagner@ait.ac.at"
 
-# Install necessary debian packages
-ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get install -y \
+# Install necessary dnf packages
+RUN dnf install -y \
 	ansible \
         git \
         vim \
         postfix \
         procps \
         cpulimit \
-        mailutils \
+        sendmail \
+        sendmail-cf \
         postfix \
         rsyslog \
         sudo \
         curl \
-        apache2 \
-        locales \
-        locales-all
-
-RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
-    dpkg-reconfigure --frontend=noninteractive locales && \
-    update-locale LANG=en_US.UTF-8
+        httpd \
+        glibc-locale-source \
+        glibc-langpack-en
 
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
+RUN localedef --force -i en_US -f UTF-8 en_US.UTF-8
 
 ADD scripts/distritest.sh /distritest.sh
 ADD . /opt/logdata-anomaly-miner
@@ -49,7 +44,7 @@ RUN mkdir -p /opt/logdata-anomaly-miner/roles/aminer
 RUN echo varbranch $varbranch
 RUN cd /opt/logdata-anomaly-miner/roles && git clone -b $varbranch https://github.com/ait-aecid/aminer-ansible.git aminer
 RUN cd /opt/logdata-anomaly-miner && sed -e "s+{{SOURCEDIR}}+$PWD+g" /opt/logdata-anomaly-miner/.playbook.yml > /opt/logdata-anomaly-miner/playbook.yml
-RUN cd /opt/logdata-anomaly-miner && ansible-playbook playbook.yml
+RUN cd /opt/logdata-anomaly-miner && ansible-playbook -v playbook.yml
 RUN git clone -b $varbranch https://github.com/ait-aecid/logdata-anomaly-miner.wiki.git /opt/wiki
 RUN awk '/^```yaml$/ && ++n == 1, /^```$/' < /opt/wiki/Getting-started-\(tutorial\).md | sed '/^```/ d' | sed '/^```python/ d' > /home/aminer/gettingStarted-config.yml
 RUN ln -s /etc/aminer/conf-available/generic/ApacheAccessModel.py /etc/aminer/conf-enabled/
