--- a/aecid-testsuite/demo/ait-lds2-russellmitchell-config.yml
+++ b/aecid-testsuite/demo/ait-lds2-russellmitchell-config.yml
@@ -119,92 +119,66 @@ Analysis:
     learn_mode: True
 
   - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_cred_NMPVCD
-    persistence_id: audit_id_pid_cred_NMPVCD
+    id: audit_service_start_uid_exe_NMPVCD
+    persistence_id: audit_service_start_uid_exe_NMPVCD
     paths:
-      - "/model/model/type/cred_acq/id"
-      - "/model/model/type/cred_acq/pid"
+      - "/model/model/type/service_start/uid"
+      - "/model/model/type/service_start/opt/opt_seq/exe"
     learn_mode: True
 
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_user_start_NMPVCD
-    persistence_id: audit_id_pid_user_start_NMPVCD
+  - type: CharsetDetector
+    id: audit_msg2_CD
+    persistence_id: audit_msg2_CD
+    id_path_list:
+      - "/model/model/type/user_acct/id"
+    paths:
+      - "/model/model/type/user_acct/msg2"
+
+  - type: CharsetDetector
+    id: apache_user_agent_CD
+    persistence_id: apache_user_agent_CD
+    id_path_list:
+      - "/model/model/client_ip/client_ip"
+    paths:
+      - "/model/model/combined"
+
+  - type: EntropyDetector
+    id: apache_request_version_ED
+    persistence_id: apache_request_version_ED
+    paths:
+      - "/model/model/fm/request/version"
+
+  - type: EntropyDetector
+    id: audit_msg2_ED
+    persistence_id: audit_msg2_ED
+    paths:
+      - "/model/model/type/user_acct/msg2"
+
+  - type: ValueRangeDetector
+    id: apache_client_ip_VRD
+    persistence_id: apache_client_ip_VRD
+    paths:
+      - "/model/model/client_ip/client_ip/client_ip"
+
+  - type: ValueRangeDetector
+    id: audit_user_login_VRD
+    persistence_id: audit_user_login_VRD
+    paths:
+      - "/model/model/type/user_login/time"
+
+  - type: EventFrequencyDetector
+    id: apache_status_code_EFD
+    persistence_id: apache_status_code_EFD
+    window_size: 20
+    paths:
+      - "/model/model/status_code"
+
+  - type: EventFrequencyDetector
+    id: audit_id_EFD
+    persistence_id: audit_id_EFD
+    window_size: 15
     paths:
       - "/model/model/type/user_start/id"
-      - "/model/model/type/user_start/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_user_acct_NMPVCD
-    persistence_id: audit_id_pid_user_acct_NMPVCD
-    paths:
-      - "/model/model/type/user_acct/id"
-      - "/model/model/type/user_acct/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_user_auth_NMPVCD
-    persistence_id: audit_id_pid_user_auth_NMPVCD
-    paths:
-      - "/model/model/type/user_auth/id"
-      - "/model/model/type/user_auth/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_user_login_NMPVCD
-    persistence_id: audit_id_pid_user_login_NMPVCD
-    paths:
-      - "/model/model/type/user_login/id"
-      - "/model/model/type/user_login/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_cred_disp_NMPVCD
-    persistence_id: audit_id_pid_cred_disp_NMPVCD
-    paths:
-      - "/model/model/type/cred_disp/id"
-      - "/model/model/type/cred_disp/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_service_start_NMPVCD
-    persistence_id: audit_id_pid_service_start_NMPVCD
-    paths:
-      - "/model/model/type/service_start/id"
-      - "/model/model/type/service_start/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_service_stop_NMPVCD
-    persistence_id: audit_id_pid_service_stop_NMPVCD
-    paths:
-      - "/model/model/type/service_stop/id"
-      - "/model/model/type/service_stop/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_user_end_NMPVCD
-    persistence_id: audit_id_pid_user_end_NMPVCD
-    paths:
-      - "/model/model/type/user_end/id"
-      - "/model/model/type/user_end/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_user_cmd_NMPVCD
-    persistence_id: audit_id_pid_user_cmd_NMPVCD
-    paths:
-      - "/model/model/type/user_cmd/id"
-      - "/model/model/type/user_cmd/pid"
-    learn_mode: True
-
-  - type: NewMatchPathValueComboDetector
-    id: audit_id_pid_cred_acq_NMPVCD
-    persistence_id: audit_id_pid_cred_acq_NMPVCD
-    paths:
-      - "/model/model/type/cred_acq/id"
-      - "/model/model/type/cred_acq/pid"
-    learn_mode: True
 
 Input:
   timestamp_paths: [""]
