implement bandit in the pre-commit checks and in Jenkins. remove Deepsource ignore comments.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,8 @@ repos:
     hooks:
     - id: autopep8
       args: [--max-line-length=140, --diff]
+
+-   repo: https://github.com/PyCQA/bandit
+    rev: 1.7.8
+    hooks:
+    - id: bandit
