--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.5.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -10,23 +10,29 @@ repos:
     -   id: check-added-large-files
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.790
+    rev: v1.9.0
     hooks:
     -   id: mypy
-        additional_dependencies: [pydantic]
+        additional_dependencies: [pydantic, types-PyYAML]
+        args: [--install-types, --ignore-missing-imports, --disable-error-code=attr-defined, --implicit-optional]
 
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.4
+-   repo: https://github.com/PyCQA/flake8
+    rev: 7.0.0
     hooks:
     - id: flake8
       args: [--max-line-length=140]
       exclude: ^aecid-testsuite/
 
 -   repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v1.7.0
+    rev: v2.0.4
     hooks:
     - id: autopep8
       args: [--max-line-length=140, --diff]
+
+-   repo: https://github.com/PyCQA/docformatter
+    rev: v1.7.5
+    hooks:
+    - id: docformatter
 
 -   repo: https://github.com/PyCQA/bandit
     rev: 1.7.8
