--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,13 @@ repos:
     -   id: check-added-large-files
     -   id: check-ast
     -   id: check-docstring-first
-
+    -   id: check-executables-have-shebangs
+    -   id: check-json
+    -   id: check-shebang-scripts-are-executable
+    -   id: check-symlinks
+    -   id: check-toml
+    -   id: check-xml
+    -   id: check-yaml
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.9.0
